objects/ProgramQualification__c.object
<CustomObject>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>The date we determined this qualification</description>
        <inlineHelpText>The date we determined this qualification</inlineHelpText>
        <label>Qualification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employment period that this program qualification is under.</description>
        <inlineHelpText>The employment period that this program qualification is under.</inlineHelpText>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipLabel>Program Qualifications</relationshipLabel>
        <relationshipName>ProgramQualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <formula>Trim(Left(Employment__r.Employee__r.FullNameFormula__c, 37)) &amp; &apos;_&apos; &amp;Trim(Left(ProgramPeriod__r.Program__r.Name, 36)) &amp; &apos;_&apos; &amp; TEXT(MONTH(EffectiveDate__c))+&quot;/&quot;+RIGHT(TEXT(YEAR(EffectiveDate__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE2ProgramQualificationID__c</fullName>
        <description>The Incentive Engine voucher ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Incentive Engine voucher ID.</inlineHelpText>
        <label>IE2 Program Qualification ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PQDocumentSourceEidGenerated__c</fullName>
        <label>PQDocumentSourceEidGenerated</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessStageDate__c</fullName>
        <description>The date as of which the current process stage was reached.</description>
        <inlineHelpText>The date as of which the current process stage was reached.</inlineHelpText>
        <label>Process Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessStageEIDformula__c</fullName>
        <formula>ProcessStage__r.QualificationProcessStageEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProcessStageEIDformula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tracks the workflow from qualification to certification.</description>
        <inlineHelpText>Tracks the workflow from qualification to certification.</inlineHelpText>
        <label>Process Stage</label>
        <referenceTo>QualificationProcessStage__c</referenceTo>
        <relationshipLabel>Program Qualifications</relationshipLabel>
        <relationshipName>ProgramQualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramPeriod__c</fullName>
        <description>The program period that the employee qualifies under</description>
        <inlineHelpText>The program period that the employee qualifies under</inlineHelpText>
        <label>Program Period</label>
        <referenceTo>ProgramPeriod__c</referenceTo>
        <relationshipLabel>Program Qualifications</relationshipLabel>
        <relationshipName>ProgramQualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProgramQualificationEID__c</fullName>
        <description>The Enterprise ID for this Program Qualification record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Program Qualification record.</inlineHelpText>
        <label>Program Qualification EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ReadyPQSortOrderFormula__c</fullName>
        <formula>ProcessStage__r.RankOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReadyPQSortOrderFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The survey qualified for this program</description>
        <inlineHelpText>The survey qualified for this program</inlineHelpText>
        <label>Survey</label>
        <referenceTo>EmployeeSurvey__c</referenceTo>
        <relationshipLabel>Program Qualifications</relationshipLabel>
        <relationshipName>ProgramQualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Key_Qualification__c</fullName>
        <description>This field is used to prevent duplicate Program Qualifications under a  Employment which belongs to the same Program</description>
        <formula>Employment__r.Id  +   ProgramPeriod__r.Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Key Qualification</label>
        <type>Text</type>
    </fields>
    <label>Program Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employment__c</columns>
        <columns>Survey__c</columns>
        <columns>ProgramPeriod__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ProcessStage__c</columns>
        <columns>ProcessStageDate__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Qualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>